--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block titulo %}
+<title>GEFIN ~ Página Inicial</title>
+{% endblock %}
+
 {% block conteudo %}
 <h1 class="mt-4">Olá Templates</h1>
 <p class="lead">
