--- a/paginas/templates/paginas/modelo.html
+++ b/paginas/templates/paginas/modelo.html
@@ -66,7 +66,7 @@
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">Core</div>
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" href="{% url 'index' %}">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
@@ -80,7 +80,7 @@
                         <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="{% url 'cadastrar-fornecedor' %}">Fornecedor</a>
+                                <a class="nav-link" href="{% url 'listar-fornecedor' %}">Fornecedor</a>
                                 <a class="nav-link" href="{% url 'cadastrar-tipo-despesa' %}">Tipo Despesa</a>
                                 <a class="nav-link" href="{% url 'cadastrar-despesa' %}">Despesa</a>
                             </nav>
