--- a/paginas/templates/paginas/modelo.html
+++ b/paginas/templates/paginas/modelo.html
@@ -41,18 +41,30 @@
         </form>
         <!-- Navbar-->
         <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+
+            {% if request.user.is_authenticated %}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
-                    aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    aria-expanded="false">
+                    <i class="fas fa-user fa-fw"></i>
+                    {{ request.user  }}
+                </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#!">Settings</a></li>
-                    <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                    <li><a class="dropdown-item" href="#!">Meus dados</a></li>
+                    <li><a class="dropdown-item" href="#!">Alterar senha</a></li>
                     <li>
                         <hr class="dropdown-divider" />
                     </li>
-                    <li><a class="dropdown-item" href="#!">Logout</a></li>
+                    <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
             </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="btn btn-success" href="{% url 'login' %}">Entrar</a>
+            </li>
+            {% endif %}
+
+
         </ul>
     </nav>
     {% endblock %}
@@ -135,10 +147,12 @@
                         </a>
                     </div>
                 </div>
+                {% if request.user.is_authenticated %}
                 <div class="sb-sidenav-footer">
-                    <div class="small">Logged in as:</div>
-                    Start Bootstrap
+                    <div class="small">Autenticado como:</div>
+                    {{ request.user }}
                 </div>
+                {% endif %}
             </nav>
         </div>
         {% endblock %}
