Listar Despesas e Tipos de Despesa

--- a/cadastros/templates/cadastros/form.html
+++ b/cadastros/templates/cadastros/form.html
@@ -12,7 +12,7 @@
     * Campo obrigatório
 </p>
 
-<form method="POST">
+<form method="POST" class="my-4">
 
     {% csrf_token %}
 
@@ -23,5 +23,7 @@
     </button>
 
 </form>
+
+<br>
 
 {% endblock %}
