--- a/paginas/templates/paginas/modelo.html
+++ b/paginas/templates/paginas/modelo.html
@@ -93,8 +93,8 @@
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="{% url 'listar-fornecedor' %}">Fornecedor</a>
-                                <a class="nav-link" href="{% url 'cadastrar-tipo-despesa' %}">Tipo Despesa</a>
-                                <a class="nav-link" href="{% url 'cadastrar-despesa' %}">Despesa</a>
+                                <a class="nav-link" href="{% url 'listar-tipo-despesa' %}">Tipo Despesa</a>
+                                <a class="nav-link" href="{% url 'listar-despesa' %}">Despesa</a>
                             </nav>
                         </div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
@@ -158,7 +158,7 @@
         {% endblock %}
 
         <div id="layoutSidenav_content">
-            <main>
+            <main class="p-3">
                 <div class="container-fluid px-4">
 
                     {% block conteudo %}
