--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -22,5 +22,72 @@
 </h4>
 {% endif %}
 
+<hr>
 
+<button id="btn-1" class="btn btn-primary">Botão 1</button>
+<button id="btn-2" class="btn btn-primary">Botão 2</button>
+<button id="btn-3" class="btn btn-primary">Botão 3</button>
+<button id="btn-4" class="btn btn-secondary">Senha</button>
+
+<div class="div-teste-1 p-3 my-3 bg-secondary">
+    Div 1
+</div>
+
+<div class="div-teste-2 p-3 my-3 bg-warning" style="display: none;">
+    Div 2
+</div>
+
+<input type="password" name="teste" id="input-teste"
+    class="form-control" value="42">
+
+{% endblock %}
+
+
+{% block scripts %}
+<script>
+    $(document).ready(function () {
+
+        
+        $("#btn-1").click(function(){
+            $(".div-teste-2").hide();
+            $(".div-teste-1").fadeIn();
+        });
+        
+        $("#btn-2").click(function () {
+            $(".div-teste-1").hide();
+
+            var v = $("#input-teste").val();
+            $(".div-teste-2").html("<h1>" + v + "</h1>");
+
+            $(".div-teste-2").fadeIn();
+        });
+
+        // Criar o botão 3 que remove a classe bg-warning da div-2
+            // e adiciona bg-success
+        $("#btn-3").click(function (e) { 
+            e.preventDefault();
+            $(".div-teste-2").removeClass('bg-warning').addClass('bg-success text-white');
+        });
+        
+        // Quando passar o mouse em cima da div-1
+            // remove a classe bg-secondary e adiciona bg-primary
+            // e quando tirar o mouse de cima, volta ao estado original
+
+        // Alterando atributos do HTML
+        $("#btn-4").click(function (e) { 
+            e.preventDefault();
+
+            var tipo = $("#input-teste").attr("type");
+            
+            if(tipo == "password"){
+                $("#input-teste").attr("type", "text");
+            } else {
+                $("#input-teste").attr("type", "password");
+            }
+            
+        });
+
+
+    });
+</script>
 {% endblock %}
